feat: Hoàn thành UI cơ bản với dữ liệu dummy, có thể chạy đường. Sử dụng Maven và Scenebuilder từ JavaFX để làm UI/UX này, hiện đã có thể đọc dữ liệu từ UI. Mọi người muốn chạy thử thì hãy đọc README.md, sẽ có hướng dẫn, ngoài ra còn có những extensions cần thiết phải cài nằm trong folder .vscode, mọi người nhớ cài nha.