@@ -12,7 +12,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <javafx.version>17.0.1</javafx.version>
+        <javafx.version>17.0.6</javafx.version>
     </properties>
 
     <dependencies>
@@ -33,17 +33,27 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.10.1</version>
                 <configuration>
                     <release>11</release>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>com.yourteamname.store.main.MainApplication</mainClass>
+                    <mainClass>com.yourteamname.store.App</mainClass>
+                    
+                    <vmArgs>
+                        <vmArg>--add-exports=javafx.controls/com.sun.javafx.scene.control.skin=ALL-UNNAMED</vmArg>
+                        <vmArg>--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED</vmArg>
+                        <vmArg>--add-exports=javafx.base/com.sun.javafx.collections=ALL-UNNAMED</vmArg>
+                        
+                        <vmArg>--add-opens=javafx.base/com.sun.javafx.reflect=ALL-UNNAMED</vmArg>
+                        <vmArg>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</vmArg>
+                    </vmArgs>
                 </configuration>
             </plugin>
         </plugins>
